syntax = "proto3";

package com.github.zibranki.model;

option java_multiple_files = true;

service PaymentsService {
  rpc processPayment (PaymentRequest) returns (PaymentResponse) {}
  rpc getSalesStats (SalesRequest) returns (SalesResponse) {}
}

message PaymentRequest {
  string price = 1; // typo in types either here or with priceModifier
  double priceModifier = 2;
  string paymentMethod = 3;
  string datetime = 4;
}

message PaymentResponse {
  string finalPrice = 1;
  int32 points = 2;
}

message SalesRequest {
  string startDateTime = 1;
  string endDateTime = 2;
}

message SalesResponse {
  repeated SalesStats sales = 1;
}

message SalesStats {
  string datetime = 1;
  string sales = 2;
  int32 points = 3;
}
